# RV1106_Linux

./: .gitignore  README.md
MNIST/: CMakeLists.txt
MNIST/common/: Makefile  fillimage.c  loadbmp.c  loadbmp.h  rtsp_demo.h  sample_comm.c  sample_comm.h  sample_comm_aenc.c  sample_comm_ai.c  sample_comm_ao.c  sample_comm_avs.c  sample_comm_iva.c  sample_comm_ivs.c  sample_comm_rgn.c  sample_comm_tde.c  sample_comm_venc.c  sample_comm_vi.c  sample_comm_vo.c  sample_comm_vpss.c
MNIST/common/isp2.x/: sample_comm_isp.c  sample_comm_isp.h
MNIST/common/isp3.x/: Makefile  sample_comm_isp.c  sample_comm_isp.h
MNIST/include/: audio_server.h  iio.h  libsync.h  luckfox_adc.h  luckfox_event.h  luckfox_gpio.h  luckfox_i2c.h  luckfox_led.h  luckfox_mpi.h  luckfox_pwm.h  luckfox_spi.h  luckfox_sysfs.h  luckfox_system.h  luckfox_time.h  luckfox_watchdog.h  mp3_enc_table1.h  mp3_enc_table2.h  mp3_enc_types.h  mp3dec.h  rkAVS_stitchFor1106.h  rk_adc.h  rk_comm_adec.h  rk_comm_aenc.h  rk_comm_af.h  rk_comm_aio.h  rk_comm_mb.h  rk_comm_rc.h  rk_comm_rgn.h  rk_comm_sys.h  rk_comm_tde.h  rk_comm_vdec.h  rk_comm_venc.h  rk_comm_vgs.h  rk_comm_vi.h  rk_comm_video.h  rk_comm_vo.h  rk_comm_vpss.h  rk_common.h  rk_debug.h  rk_defines.h  (+35 more)
MNIST/include/libdrm/: amdgpu_drm.h  drm.h  drm_fourcc.h  drm_mode.h  i915_drm.h  nouveau_drm.h  qxl_drm.h  rockchip_drm.h  rockchip_drmif.h  tegra_drm.h  vc4_drm.h  virtgpu_drm.h
MNIST/include/libkms/: libkms.h
MNIST/include/opencv4/opencv2/: cvconfig.h  highgui.hpp  opencv_modules.hpp
MNIST/include/opencv4/opencv2/core/: bindings_utils.hpp  ocl.hpp
MNIST/include/opencv4/opencv2/highgui/: highgui.hpp
MNIST/include/rga/: GrallocOps.h  RgaApi.h  RgaMutex.h  RgaSingleton.h  RgaUtils.h  RockchipRga.h  drmrga.h  im2d.h  im2d.hpp  im2d_buffer.h  im2d_common.h  im2d_expand.h  im2d_mpi.h  im2d_single.h  im2d_task.h  im2d_type.h  im2d_version.h  rga.h
MNIST/include/rkaiq/: config.h
MNIST/include/rkaiq/algos/: rk_aiq_algo_des.h  rk_aiq_algo_types.h
MNIST/include/rkaiq/algos/a3dlut/: rk_aiq_types_a3dlut_algo.h  rk_aiq_types_a3dlut_algo_int.h  rk_aiq_types_a3dlut_hw.h  rk_aiq_uapi_a3dlut_int.h
MNIST/include/rkaiq/algos/abayer2dnr2/: rk_aiq_types_abayer2dnr_algo_int_v2.h  rk_aiq_types_abayer2dnr_algo_v2.h  rk_aiq_types_abayer2dnr_hw_v2.h  rk_aiq_uapi_abayer2dnr_int_v2.h  rk_aiq_uapi_camgroup_abayer2dnr_int_v2.h
MNIST/include/rkaiq/algos/abayer2dnrV23/: rk_aiq_types_abayer2dnr_algo_int_v23.h  rk_aiq_types_abayer2dnr_algo_v23.h  rk_aiq_types_abayer2dnr_hw_v23.h  rk_aiq_uapi_abayer2dnr_int_v23.h  rk_aiq_uapi_camgroup_abayer2dnr_int_v23.h
MNIST/include/rkaiq/algos/abayertnr2/: rk_aiq_types_abayertnr_algo_int_v2.h  rk_aiq_types_abayertnr_algo_v2.h  (+3 more)
MNIST/include/rkaiq/common/: list.h  rk-camera-module.h  rk_aiq.h  rk_aiq_comm.h  rk_aiq_mems_sensor.h  rk_aiq_types.h  rk_aiq_types_v32.h  rk_aiq_types_v3x.h  rk_isp20_hw.h  rkaiq_ini.h  rkisp2-config.h  rkisp21-config.h  rkisp3-config.h  rkisp32-config.h
MNIST/include/rkaiq/ipc_server/: rkaiq_tool_ae.h  rkaiq_tool_imgproc.h  rkaiq_tool_sysctl.h  socket_server.h
MNIST/include/rkaiq/iq_parser/: RkAiqCalibApi.h  RkAiqCalibDbTypes.h  RkAiqCalibDbTypesIsp20.h  RkAiqCalibDbTypesIsp21.h
MNIST/include/rkaiq/iq_parser_v2/: RkAiqCalibDbTypesV2.h  RkAiqCalibDbV2.h  RkAiqCalibDbV2Helper.h  RkAiqCalibDbV2TypesIsp20.h  RkAiqCalibDbV2TypesIsp21.h  RkAiqCalibDbV2TypesIsp32.h  RkAiqCalibDbV2TypesIsp3x.h  RkAiqUapitypes.h  ablc_head.h  ablc_head_V32.h  ablc_uapi_head_v32.h  adegamma_head.h  adehaze_head.h  adehaze_uapi_head.h  adpcc_head.h  adrc_head.h  adrc_uapi_head.h  aec_head.h  aec_uapi_head.h  af_head.h  agamma_head.h  agamma_uapi_head.h  agic_head.h  alsc_head.h  amerge_head.h  amerge_uapi_head.h  atmo_head.h  atmo_uapi_head.h  awb_head.h  awb_uapi_head.h  bayer2dnr_head_v2.h  bayer2dnr_head_v23.h  bayer2dnr_uapi_head_v23.h  bayernr_head_v1.h  bayernr_head_v2.h  bayertnr_head_v2.h  bayertnr_head_v23.h  bayertnr_uapi_head_v23.h  cac_head.h  ccm_head.h  (+32 more)
MNIST/include/rkaiq/smartIr/: rk_smart_ir_api.h
MNIST/include/rkaiq/uAPI2/: rk_aiq_user_api2_a3dlut.h  rk_aiq_user_api2_abayer2dnr_v2.h  rk_aiq_user_api2_abayer2dnr_v23.h  rk_aiq_user_api2_abayernr_v2.h  rk_aiq_user_api2_abayertnr_v2.h  rk_aiq_user_api2_abayertnr_v23.h  rk_aiq_user_api2_ablc.h  rk_aiq_user_api2_ablc_v32.h  rk_aiq_user_api2_acac.h  rk_aiq_user_api2_accm.h  rk_aiq_user_api2_acgc.h  rk_aiq_user_api2_acnr_v1.h  rk_aiq_user_api2_acnr_v2.h  rk_aiq_user_api2_acnr_v30.h  rk_aiq_user_api2_acp.h  rk_aiq_user_api2_acsm.h  rk_aiq_user_api2_adebayer.h  rk_aiq_user_api2_adegamma.h  rk_aiq_user_api2_adehaze.h  rk_aiq_user_api2_adpcc.h  rk_aiq_user_api2_adrc.h  rk_aiq_user_api2_ae.h  rk_aiq_user_api2_af.h  rk_aiq_user_api2_afec.h  rk_aiq_user_api2_again_v2.h  rk_aiq_user_api2_agamma.h  rk_aiq_user_api2_agic.h  rk_aiq_user_api2_aie.h  rk_aiq_user_api2_aldch.h  rk_aiq_user_api2_aldch_v21.h  rk_aiq_user_api2_alsc.h  rk_aiq_user_api2_amerge.h  rk_aiq_user_api2_anr.h  rk_aiq_user_api2_asharp_v3.h  rk_aiq_user_api2_asharp_v33.h  rk_aiq_user_api2_asharp_v4.h  rk_aiq_user_api2_atmo.h  rk_aiq_user_api2_awb.h  rk_aiq_user_api2_aynr_v2.h  rk_aiq_user_api2_aynr_v22.h  (+10 more)
MNIST/include/rknn/: mnist.h  postprocess.h
MNIST/include/rockchip/: mpp_buffer.h  mpp_err.h  mpp_frame.h  mpp_meta.h  mpp_packet.h  mpp_rc_api.h  mpp_rc_defs.h  mpp_task.h  rk_mpi.h  rk_mpi_cmd.h  rk_mpi_mb_cmd.h  rk_type.h  rk_vdec_cfg.h  rk_vdec_cmd.h  rk_venc_cfg.h  rk_venc_cmd.h  rk_venc_rc.h  rk_venc_ref.h  vpu.h  vpu_api.h
MNIST/include/rockiva/: rockiva_ba_api.h  rockiva_common.h  rockiva_det_api.h  rockiva_face_api.h  rockiva_image.h
MNIST/lib/cmake/opencv4/: OpenCVConfig-version.cmake  OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
MNIST/lib/pkgconfig/: libdrm.pc  libdrm_rockchip.pc  libkms.pc
MNIST/model/: mnist.rknn
MNIST/src/: luckfox_mpi.cc  main.cc  mnist.cc
rkmpi/: CMakeLists.txt  rkmpi-test.cc
v4l2/: CMakeLists.txt  captureJpgApp.cpp
v4l2/tools/: v4l2CapPicTool.cpp  v4l2CapPicTool.h
yolov5/: CMakeLists.txt  main.cc
yolov5/utils/: image_utils.c  image_utils.h
(+195 files in other folders)
